--- a/lab7/index.html
+++ b/lab7/index.html
@@ -20,14 +20,24 @@ function draw_road(road_pos_x) {
         ctx.fillRect(road_pos_x + (segment_width * i), road_pos_y, segment_width, segment_height);
     }
     if (road_pos_x <= -segment_width)
-        road_pos_x += 200;
+        road_pos_x += segment_width * 2;
     requestAnimationFrame(()=>{
-        ctx.clearRect(0, 0, canvas.clientWidth, canvas.clientHeight);
         draw_road(road_pos_x - road_velocity);
     });
 }
 
+function draw_background() {
+    ctx.fillStyle = "blue";
+    ctx.fillRect(0, 0, canvas.clientWidth, canvas.clientHeight);
+    requestAnimationFrame(()=>{
+        draw_background();
+    })
+}
+
+function 
+
 requestAnimationFrame(()=>{
+    draw_background();
     draw_road(0);
 });
 </script>
