Working with jump

--- a/lab7/index.html
+++ b/lab7/index.html
@@ -8,21 +8,25 @@ var ctx = canvas.getContext("2d");
 
 // road contants
 const segment_height = 40;
+const road_pos_y = canvas.clientHeight - segment_height;
 
 // player constants
 const player_height = 40;
 
 // player globals
 var player_pos_x = canvas.clientWidth / 8;
-var player_pos_y = canvas.clientHeight - segment_height - player_height;
+var player_pos_y = road_pos_y - player_height;
+
+// jump contants
+var jump_max_height = 100;
 
 // jump globals
 var in_air = false;
+var jump_vel = -3;
 
 function draw_road(road_pos_x) {
     const segment_width = 100;
     const road_velocity = 2;
-    const road_pos_y = canvas.clientHeight - segment_height;
     const num_of_segments = (canvas.clientWidth / segment_width) + 1;
 
     ctx.fillStyle="white";
@@ -49,6 +53,18 @@ function draw_player() {
     const player_width = 150;
     ctx.fillStyle = "green";
     ctx.fillRect(player_pos_x, player_pos_y, player_width, player_height);
+
+    if (in_air) {
+        player_pos_y += jump_vel;
+        if (player_pos_y <= jump_max_height)
+            jump_vel = -jump_vel;
+        if (player_pos_y + player_height <= road_pos_y) {
+            jump_vel = 0
+            in_air = false;
+        }
+            
+    }
+
     requestAnimationFrame(()=>{
         draw_player();
     })
@@ -58,8 +74,10 @@ document.addEventListener('keydown', (event)=> {
     if (event.defaultPrevented) { return; }
     switch (event.key) {
         case " ":
-            in_air = true;
-            
+            if (!in_air) {
+                in_air = true;
+                jump_vel = -10;
+            }
     }
     event.preventDefault();
 }, true);
