--- a/lab8/index.html
+++ b/lab8/index.html
@@ -9,25 +9,25 @@ var ctx = canvas.getContext("2d");
 // constants correlated to field size
 const segment_size = 40;
 const num_of_segments = 9
-const segments_off_w = (canvas.clientWidth - (num_of_segments - 1) * segment_size)/2;
-const segments_off_h = (canvas.clientHeight - (num_of_segments - 1) * segment_size)/2;
+// constants correlated strictly to drawing lines at playground
+const line_length = ((num_of_segments - 1) * segment_size);
+const segments_off_w = (canvas.clientWidth - line_length)/2;
+const segments_off_h = (canvas.clientHeight - line_length)/2;
 
-// constants correlated to drawing lines at playground
-const line_length = (num_of_segments * segment_size);
 
 function draw_background()
 {
     ctx.fillStyle = "#eba946";
     ctx.fillRect(0, 0, canvas.clientWidth, canvas.clientHeight);
     ctx.fillStyle = 'black';
-    for (let i = 0; i < num_of_segments + 1; ++i) {
+    for (let i = 0; i < num_of_segments; ++i) {
         ctx.beginPath();
         ctx.moveTo(segments_off_w  + (i * segment_size), segments_off_h);
         ctx.lineTo(segments_off_w  + (i * segment_size), segments_off_h + line_length);
         ctx.closePath();
         ctx.stroke();
     }
-    for (let i = 0; i < num_of_segments + 1; ++i) {
+    for (let i = 0; i < num_of_segments; ++i) {
         ctx.beginPath();
         ctx.moveTo(segments_off_w, segments_off_h   + (i * segment_size));
         ctx.lineTo(segments_off_w + line_length, segments_off_h + (i * segment_size));
