Added mouse handler

--- a/lab8/index.html
+++ b/lab8/index.html
@@ -20,7 +20,9 @@ const stone_r = 20;
 // stones related variables
 var stones_cords = [{x: 1, y: 0}];
 
-
+canvas.addEventListener('click', (event)=>{
+    
+});
 
 function draw_stones()
 {
