--- a/lab8_1/index.html
+++ b/lab8_1/index.html
@@ -44,7 +44,7 @@ canvas.addEventListener('click', (event)=>{
     const y = find_nearest_point(event.offsetY, segments_off_h);
     if (check_if_field_exists(x, y) && check_if_field_is_empty(x, y)) {
         stones_cords.push({x: x, y: y, c: player});
-        collect_neighbours({x: x, y: y, c: player}, []);
+        console.log(collect_neighbours({x: x, y: y, c: player}, []));
         player = (player === 'white') ? 'black' : 'white';
     }
 });
@@ -74,14 +74,17 @@ function is_neighbour(s1, s2)
 
 function collect_neighbours(s, collector)
 {
+    console.log(s);
     for (const stone of stones_cords) {
-        if (is_neighbour(s, stone) && !collector.includes(stone)) {
-            collector.push(stone);
-            collect_neighbours(stone, collector);
+        if (is_neighbour(s, stone)) {
+            if (!collector.includes(stone)) {
+                collector.push(stone);
+                collect_neighbours(stone, collector);
+            }
+            return true;
         }
-        console.log(stone);
-        return (collector.includes(s) && collector.length > 3);
     }
+    return (collector.includes(s) && collector.length > 3);
 }
 
 function is_stone_in_circle(s)
