--- a/lab8_1/index.html
+++ b/lab8_1/index.html
@@ -44,7 +44,6 @@ function clear_stones(neighbors)
 {
     
     const unique_x = new Set([...neighbors].map( elem => elem.x));
-    console.log(unique_x);
 }
 
 canvas.addEventListener('click', (event)=>{
@@ -76,20 +75,18 @@ function draw_stones()
 
 function is_neighbour(s1, s2)
 {
-    return ((s1.x + 1 == s2.x || s1.x - 1 == s2.x) &&
-            (s1.y + 1 == s2.y || s1.y - 1 == s2.y) && (s1.c === s2.c));
+    return ((s1.x + 1 == s2.x || s1.x - 1 == s2.x || s1.x == s2.x) &&
+            (s1.y + 1 == s2.y || s1.y - 1 == s2.y || s1.y == s2.y) && (s1.c === s2.c));
 }
 
-function collect_neighbours(s)
+function collect_neighbours(s, collector)
 {
-    collector = new Set([s]);
     for (const stone of stones_cords) {
-        for (const collected of collector) {
-            if (is_neighbour(stone, collected) ) {
-                collector.add(stone);
-            }
+        if (is_neighbour(stone, s) && !collector.includes(stone)) {
+            return collect_neighbours(stone, collector);
         }
     }
+    console.log(collector);
     return collector;
 }
 
